included revised adaptive lattice

--- a/14_adaptive-lattice-documentation.ipynb
+++ b/14_adaptive-lattice-documentation.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to GENYSIS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import genysis\n",
     "import math as m\n",
@@ -23,46 +15,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uploading file size: 6.716 MB\n",
+      "uploading file size: 0.194 MB\n",
       "[==================================================]100%\n",
-      "successfully uploaded models/handleVol.stp as volume.stp\n"
+      "successfully uploaded models/testVol.stp as volume.stp\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'message': 'handleVol.stp uploaded to wildfeuer.peter@gmail.com/volume.stp'}"
+       "{'message': 'testVol.stp uploaded to wildfeuer.peter@gmail.com/volume.stp'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genysis.upload(\"models/handleVol.stp\",\"volume.stp\",token)"
+    "genysis.upload(\"models/testVol.stp\",\"volume.stp\",token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "request:  {\"input\": \"volume.stp\", \"output\": \"handleAdaptiveGrid.json\", \"cellSize\": 7, \"origin\": [0, 0, 0], \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
-      "response:  \"handleAdaptiveGrid.json\"\n",
+      "request:  {\"input\": \"volume.stp\", \"output\": \"adaptiveGrid.json\", \"cellSize\": 8, \"origin\": [0, 0, 0], \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
+      "response:  \"adaptiveGrid.json\"\n",
       "\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=handleAdaptiveGrid.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=adaptiveGrid.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
     },
     {
@@ -72,14 +64,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=handleAdaptiveGrid.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=adaptiveGrid.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x243ac6b02c8>"
+       "<IPython.lib.display.IFrame at 0x192278d9dc8>"
       ]
      },
      "metadata": {},
@@ -88,10 +80,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=handleAdaptiveGrid.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=adaptiveGrid.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,17 +91,17 @@
    "source": [
     "lattice = genysis.adaptiveLattice()\n",
     "lattice.setVolume('volume.stp')\n",
-    "lattice.setGridOutput('handleAdaptiveGrid.json')\n",
-    "lattice.setCellSize(7)\n",
+    "lattice.setGridOutput('adaptiveGrid.json')\n",
+    "lattice.setCellSize(8)\n",
     "lattice.setOrigin([0,0,0])\n",
     "lattice.genGrid(token)\n",
     "\n",
-    "genysis.visualize(\"handleAdaptiveGrid.json\",token,True)"
+    "genysis.visualize(\"adaptiveGrid.json\",token,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,12 +132,12 @@
     "\n",
     "\treturn crvPts\n",
     "\n",
-    "attCrvs = parseAtt('models/attCrvs_AdaptiveDemo.csv')"
+    "attCrvs = parseAtt('models/attCrvs_Adaptive.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +146,11 @@
      "text": [
       "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
       "response:  [\"cell_0.obj\"]\n",
-      "request:  {\"case\": 3, \"chamfer\": 1, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
+      "request:  {\"case\": 2, \"chamfer\": 1, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
       "response:  [\"cell_1.obj\"]\n",
-      "request:  {\"boxes\": \"handleAdaptiveGrid.json\", \"component\": \"cell_0.obj\", \"filename\": \"tempCrvs.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\", \"blendTargets\": [{\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[104.245439469, 113.97573605, 13.4338370741], [104.245439469, 116.301730396, 16.5670537456], [104.245439469, 119.090312899, 19.2966634742], [104.245439469, 122.273198462, 21.5541520534], [104.245439469, 125.770990523, 23.2840967197], [104.245439469, 129.495938041, 24.4469924636], [104.245439469, 133.356203168, 25.0184319317], [104.245439469, 137.25851348, 24.9909863185], [104.245439469, 141.111201132, 24.3698157851], [104.245439469, 144.824800841, 23.1705512312], [104.245439469, 148.312364153, 21.4196372632], [104.245439469, 151.490397828, 19.155037826], [104.245439469, 154.279735756, 16.4260810151], [104.245439469, 156.607166628, 13.2940028796], [104.245439469, 158.407315528, 9.83206687445], [104.245439469, 159.62391824, 6.12464581642], [104.245439469, 160.227351534, 2.26958551409], [104.245439469, 160.261730717, -1.63427682271], [104.245439469, 159.760740836, -5.50407295213], [104.245439469, 158.642588378, -9.24234723466], [104.245439469, 156.935015115, -12.7508663559]], \"range\": 20}}, {\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[144.245439469, 113.889880045, 13.4861683536], [144.245439469, 116.206052581, 16.6482177576], [144.245439469, 119.000969868, 19.3960495811], [144.245439469, 122.204057011, 21.6549266542], [144.245439469, 125.729785611, 23.3673349265], [144.245439469, 129.482607306, 24.4988767477], [144.245439469, 133.365913573, 25.0335742162], [144.245439469, 137.285682751, 24.9776295459], [144.245439469, 141.15459498, 24.3451759775], [144.245439469, 144.889316175, 23.1534045334], [144.245439469, 148.407432773, 21.4240754418], [144.245439469, 151.626078986, 19.1865115216], [144.245439469, 154.460676787, 16.47923069], [144.245439469, 156.825219252, 13.3534012939], [144.245439469, 158.634711919, 9.87727784196], [144.245439469, 159.804055452, 6.13717352091], [144.245439469, 160.302818433, 2.25016638225], [144.245439469, 160.30458629, -1.6725330284], [144.245439469, 159.908582858, -5.57160560074], [144.245439469, 158.836825349, -9.34078770812], [144.245439469, 157.119686271, -12.8634278223]], \"range\": 20}}, {\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[184.245439469, 113.804429705, 13.5382523702], [184.245439469, 116.110933962, 16.7298766145], [184.245439469, 118.912864545, 19.4964138377], [184.245439469, 122.137227737, 21.7565624731], [184.245439469, 125.691895718, 23.4508579067], [184.245439469, 129.473270107, 24.5504759188], [184.245439469, 133.380099602, 25.0483323181], [184.245439469, 137.317971198, 24.9638601519], [184.245439469, 141.203788344, 24.319231074], [184.245439469, 144.959815589, 23.1329188612], [184.245439469, 148.507899838, 21.4226366018], [184.245439469, 151.766150291, 19.21001624], [184.245439469, 154.645606677, 16.5235125192], [184.245439469, 157.048191853, 13.4039205846], [184.245439469, 158.869219661, 9.91381700392], [184.245439469, 159.99101602, 6.14102061789], [184.245439469, 160.379677345, 2.22376754679], [184.245439469, 160.351871498, -1.71487489856], [184.245439469, 160.063924694, -5.64121014951], [184.245439469, 159.035588677, -9.44048288016], [184.245439469, 157.303856241, -12.9756838039]], \"range\": 20}}, {\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[224.245439469, 113.719342885, 13.5901148131], [224.245439469, 116.016320464, 16.812133045], [224.245439469, 118.825969988, 19.5979153213], [224.245439469, 122.072751434, 21.859218214], [224.245439469, 125.657429505, 23.5347734171], [224.245439469, 129.468102592, 24.6018197651], [224.245439469, 133.39900785, 25.0626498364], [224.245439469, 137.3556869, 24.9495483277], [224.245439469, 141.259151072, 24.2918728152], [224.245439469, 145.036795321, 23.1091197693], [224.245439469, 148.614446861, 21.4154541014], [224.245439469, 151.911440697, 19.2256530588], [224.245439469, 154.835294098, 16.5588205516], [224.245439469, 157.276621686, 13.4452138736], [224.245439469, 159.110939817, 9.94104452923], [224.245439469, 160.184539168, 6.13540643916], [224.245439469, 160.457263521, 2.18993744047], [224.245439469, 160.40427207, -1.76130385384], [224.245439469, 160.227062923, -5.71270110808], [224.245439469, 159.238752721, -9.54131330784], [224.245439469, 157.487351169, -13.0875283314]], \"range\": 20}}, {\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[263.225120044, 157.632974432, -13.1762891776], [264.162592389, 155.161909495, -16.3840710456], [264.886295366, 152.139769776, -19.1454911849], [265.390056042, 148.690496943, -21.4118853591], [265.673708274, 144.925534229, -23.1542899434], [265.739298864, 140.944071292, -24.3529557876], [265.587448576, 136.836887465, -24.9863671036], [265.221969699, 132.695119769, -25.0416852398], [264.633344821, 128.619690414, -24.4669454463], [263.82939786, 124.725578818, -23.254232055], [262.822974165, 121.140689526, -21.4061194262], [261.646518083, 117.973695362, -18.983949187], [260.338996373, 115.30852223, -16.0733134052], [258.942714932, 113.190403841, -12.7788758069], [257.496604581, 111.634238311, -9.20378700836], [256.033944163, 110.632698731, -5.44135410026], [254.582036188, 110.167048892, -1.57138283278], [253.163549429, 110.21704198, 2.33866572571], [251.802513388, 110.795635799, 6.22608566343], [250.529733031, 111.940732294, 10.0159363406], [249.382335604, 113.680931616, 13.6135273958]], \"range\": 20}}]}\n",
+      "request:  {\"boxes\": \"handleAdaptiveGrid.json\", \"component\": \"cell_0.obj\", \"filename\": \"tempCrvs.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\", \"blendTargets\": [{\"component\": \"cell_1.obj\", \"attractor\": {\"curve\": [[-27.5794888698, -15.6185558426, 14.2259524038], [-26.9038232618, -15.5975916292, 14.6799108387], [-26.2281576539, -15.5766274158, 15.1338692737], [-25.5524920459, -15.5556632024, 15.5878277086], [-24.876826438, -15.534698989, 16.0417861435], [-24.20116083, -15.5137347756, 16.4957445785], [-23.5254952221, -15.4927705622, 16.9497030134], [-22.8498296141, -15.4718063488, 17.4036614483], [-22.1741640062, -15.4508421354, 17.8576198832], [-21.5437295047, -15.4312886379, 18.3654141387], [-20.9746879227, -15.4137130318, 18.9475768381], [-20.3976237492, -15.3959743347, 19.5217838895], [-19.8129441374, -15.3780819157, 20.0882306349], [-19.2210183508, -15.3600442591, 20.6470967462], [-18.6221821057, -15.3418690684, 21.1985474133], [-18.0167406752, -15.3235633376, 21.7427349581], [-17.4049745539, -15.3051335023, 22.2797975896], [-16.787138855, -15.2865854036, 22.8098633006], [-16.1634685975, -15.2679244326, 23.3330480804], [-15.5341798132, -15.2491555504, 23.8494575128], [-14.8994706445, -15.2302833095, 24.3591879803], [-14.2595259549, -15.2113119816, 24.8623248157], [-13.6145144793, -15.1922454638, 25.3589462214], [-12.9645934611, -15.1730874093, 25.8491210016], [-12.3099075322, -15.1538411876, 26.3329106692], [-11.6505911736, -15.1345099514, 26.8103686425], [-10.9867706738, -15.1150966891, 27.2815398044], [-10.3185616353, -15.0956041473, 27.7464631081], [-9.64607234725, -15.0760349261, 28.2051698527], [-8.96940298917, -15.0563914528, 28.6576848527], [-8.28864754475, -15.0366760341, 29.1040256584], [-7.60389246456, -15.0168908161, 29.5442038786], [-6.9152198453, -14.9970378734, 29.9782234813], [-6.22270484622, -14.9771191335, 30.4060827633], [-5.52641800181, -14.9571364419, 30.827773106], [-4.82642515176, -14.9370915593, 31.243279222], [-4.12278669271, -14.9169861395, 31.652579711], [-3.41556047107, -14.8968218118, 32.0556454394], [-2.70479913185, -14.8766001048, 32.4524411174], [-1.99055178333, -14.8563224944, 32.8429242924], [-1.2728642438, -14.8359904114, 33.2270451435], [-0.551779009776, -14.8156052406, 33.6047463753], [0.172664240744, -14.7951683366, 33.9759627738], [0.900429126835, -14.7746810112, 34.3406212186], [1.6314817803, -14.7541445572, 34.698639984], [2.36579084982, -14.7335602499, 35.0499283974], [3.1033275713, -14.7129293475, 35.3943864537], [3.84406422501, -14.6922531369, 35.7319036205], [4.58797703529, -14.6715328553, 36.0623596128], [5.33504254245, -14.6507697948, 36.3856220882], [6.08523932989, -14.6299652587, 36.7015467155], [6.83854739322, -14.6091205823, 37.0099760598], [7.59494783327, -14.5882371474, 37.3107385119], [8.35442312211, -14.5673163801, 37.603647316], [9.11695580371, -14.5463597929, 37.8884988428], [9.88252899032, -14.5253689785, 38.1650714118], [10.6511257509, -14.5043456348, 38.4331234878], [11.4227282109, -14.4832915988, 38.6923915875], [12.1973194603, -14.4622088051, 38.9425888628], [12.9748784999, -14.4410994364, 39.1834010962], [13.7553829074, -14.4199658641, 39.41448495], [14.5388069609, -14.3988107157, 39.6354642998], [15.3251205184, -14.3776369235, 39.8459263832], [16.1142864367, -14.3564478155, 40.0454170485], [16.9062641642, -14.3352470437, 40.2334368909], [17.7009993735, -14.3140388914, 40.4094331368], [18.4984268166, -14.2928282299, 40.5727940046], [19.2984656033, -14.2716206843, 40.7228400616], [20.1010153841, -14.2504227817, 40.8588145276], [20.9059481831, -14.2292422224, 40.9798712895], [21.7131076707, -14.2080879655, 41.0850621608], [22.5222928481, -14.1869707366, 41.1733194071], [23.3332503532, -14.1659033232, 41.2434368767], [24.1451357852, -14.1448722663, 41.3020962066], [24.9570293911, -14.1238415669, 41.3606475101], [25.7689229969, -14.1028108674, 41.4191988135], [26.5808166027, -14.081780168, 41.477750117], [27.3927102086, -14.0607494686, 41.5363014205], [28.2046038144, -14.0397187691, 41.594852724], [29.0164974202, -14.0186880697, 41.6534040274], [29.8283910261, -13.9976573702, 41.7119553309]], \"range\": 30}}]}\n",
       "response:  [\"tempCrvs.obj\"]\n",
-      "request:  {\"lines\": \"tempCrvs.obj\", \"resolution\": 600, \"memberThickness\": 0.5, \"filename\": \"handleAdaptiveOutput.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
+      "request:  {\"lines\": \"tempCrvs.obj\", \"resolution\": 400, \"memberThickness\": 0.5, \"filename\": \"handleAdaptiveOutput.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
       "response:  [\"handleAdaptiveOutput.obj\"]\n",
       "https://studiobitonti.appspot.com/apps/visualize?name=handleAdaptiveOutput.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
@@ -177,7 +169,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x243abe6e1c8>"
+       "<IPython.lib.display.IFrame at 0x192267adf08>"
       ]
      },
      "metadata": {},
@@ -189,7 +181,7 @@
        "'https://studiobitonti.appspot.com/apps/visualize?name=handleAdaptiveOutput.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,18 +191,18 @@
     "cell_1 = 'cell_1.obj'\n",
     "\n",
     "genysis.genLatticeUnit(case=2,chamfer=0,centerChamfer=0,bendIn=0,cBendIn=0,connectPt=0,output=cell_0,token=token)\n",
-    "genysis.genLatticeUnit(case=3,chamfer=1,centerChamfer=0,bendIn=0,cBendIn=0,connectPt=0,output=cell_1,token=token)\n",
+    "genysis.genLatticeUnit(case=2,chamfer=1,centerChamfer=0,bendIn=0,cBendIn=0,connectPt=0,output=cell_1,token=token)\n",
     "\n",
     "for i in range(len(attCrvs)):\n",
-    "   lattice.addCurveAttractor(cell_0,attCrvs[i],range=20)\n",
+    "   lattice.addCurveAttractor(cell_1,attCrvs[i],range=30)\n",
     "\n",
     "lattice.setComponent('cell_0.obj')\n",
     "lattice.setOutput('tempCrvs.obj')\n",
     "lattice.populateLattice(token)\n",
     "\n",
-    "genysis.marchingCube('tempCrvs.obj',600,.5,'handleAdaptiveOutput.obj',token)\n",
+    "genysis.marchingCube('tempCrvs.obj',400,.5,'adaptiveOutput.obj',token)\n",
     "\n",
-    "genysis.visualize(\"handleAdaptiveOutput.obj\",token,True)"
+    "genysis.visualize(\"adaptiveOutput.obj\",token,True)"
    ]
   },
   {
@@ -228,7 +220,7 @@
     }
    ],
    "source": [
-    "genysis.download(src='handleAdaptiveOutput.obj',dest='output.obj',token=token)"
+    "genysis.download(src='adaptiveOutput.obj',dest='output.obj',token=token)"
    ]
   },
   {
